fix layout problems with top-right graphs

--- a/src/examples/complex-atoms-model/application.sass
+++ b/src/examples/complex-atoms-model/application.sass
@@ -5,10 +5,15 @@ body
   background: url(../../resources/aspect-ratio-1x1.png) no-repeat -9999px -9999px
 
 #content
+  width: 90%
   height: 50em
+
+#viz
+  width: 100%
 
 .top
   height: 76%
+  width: 100%
   padding: 0.5em 1.0em
   position: relative
   display: inline-block
